# Level5--DNATool

./: CMakeLists.txt  aligment.txt  main.cpp  main_test.cpp  utilidades.cpp  utilidades.h  utility.cpp  utility.h
Resultados/: Mystery1_alpha.txt  Mystery1_beta.txt  Mystery1_delta.txt  Mystery1_gamma.txt  Mystery1_omicron1.txt  Mystery1_omicron2.txt  Mystery1_wuhan.txt  Mystery2_alpha.txt  Mystery2_beta.txt  Mystery2_delta.txt  Mystery2_gamma.txt  Mystery2_omicron1.txt  Mystery2_omicron2.txt  Mystery2_wuhan.txt  Mystery3_alpha.txt  Mystery3_beta.txt  Mystery3_delta.txt  Mystery3_gamma.txt  Mystery3_omicron1.txt  Mystery3_omicron2.txt  Mystery3_wuhan.txt  READ ME RESULTADOS.txt
resources/reference/: Alpha B.1.1.7 - MZ314997.txt  Beta B.1.351 - MZ314996.txt  Delta B.1.617.2 - OM202516.txt  Gamma P.1 - MW642250.txt  Omicron B.1.1.529 BA.1 - OM432158.txt  Omicron B.1.1.529 BA.2 - OM617939.txt
resources/test/: Mystery genome 1 - OV806939.txt  Mystery genome 2 - MT345875.txt  Mystery genome 3 - OU772970.txt  genome1.txt  genome2.txt
